<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".Login_Activity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_progress"
        style="?android:progressBarStyleLarge"
        android:visibility="gone"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        />

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:hint="@string/email_hint"
        android:maxLines="1"
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/app_pass"
            android:id="@+id/password"
            android:layout_marginTop="8dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:id="@+id/email_signbtn"
            android:text="@string/login"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_or"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:textStyle="bold"
            />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:id="@+id/email_createloginbtn"
        android:text="@string/create"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        />

</LinearLayout>